<!--
  ~ Copyright 2020-2025 Bart Vullings <dev@windkracht8.com>
  ~ This file is part of RugbyRefereeWatch
  ~ RugbyRefereeWatch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~ RugbyRefereeWatch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Rugby Referee Watch</string>

    <!-- filenames -->
    <string name="matches_filename" translatable="false">matches.json</string>
    <string name="deleted_matches_filename" translatable="false">deleted_matches.json</string>
    <string name="match_types_filename" translatable="false">match_types.json</string>

    <!-- numbers -->
    <string name="_0" translatable="false">0</string>
    <string name="_00" translatable="false">00</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_5" translatable="false">5</string>
    <string name="_10" translatable="false">10</string>
    <string name="_40" translatable="false">40</string>
    <string name="_60" translatable="false">60</string>
    <string name="x" translatable="false">X</string>

    <!-- main ui -->
    <string name="icon_desc">icon</string>
    <string name="connect">Tap icon to connect with watch</string>
    <string name="history">History</string>
    <string name="report">Report</string>
    <string name="prepare">Prepare</string>
    <string name="svMatches_desc">History of matches</string>

    <string name="home">home</string>
    <string name="away">away</string>
    <string-array name="teams">
        <item>HOME</item>
        <item>AWAY</item>
    </string-array>

    <!-- permission -->
    <string name="permission_title">Permissions required</string>
    <string name="permission_nearby_title">Nearby devices is needed to connect to your watch</string>
    <string name="permission_nearby">Allow nearby devices</string>
    <string name="permission_explain">If clicking allow on this screen does nothing, you will need
        to allow the permission in your phone\'s settings manually.</string>

    <!-- device select/connect -->
    <string name="device_select_title">To connect, open the app on the watch, don\'t start a match,
        and select your watch from the list below</string>
    <string name="device_select_new">New WearOS watch</string>
    <string name="device_select_none">No Bluetooth device found, first pair your watch</string>
    <string name="device_select_garmin_new">New Garmin watch</string>
    <string name="device_select_garmin_none">No Garmin watch found, first pair your watch with the Garmin Connect app</string>
    <string name="device_select_garmin_not">The Garmin Connect app is not found, install that first</string>
    <string name="device_select_garmin_update">You need to update the Garmin Connect app</string>
    <string name="device_connect_instruct">keep the app on the watch open while trying to
        connect, and don\'t start a match</string>
    <string name="delete_device">Delete device?</string>
    <string name="delete">Delete</string>

    <!-- history -->
    <string name="bSync_text">Synchronise with watch</string>
    <string name="bImport_text">Import</string>
    <string name="bExport_text">Export selected</string>
    <string name="bDelete_text">Delete selected</string>

    <!-- report -->
    <string name="tries">Tries</string>
    <string name="conversions">Conversions</string>
    <string name="pen_tries">Penalty tries</string>
    <string name="goals">Goals</string>
    <string name="pen_goals">Penalty goals</string>
    <string name="drop_goals">Drop goals</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_cards">Red cards</string>
    <string name="penalties">Penalties</string>
    <string name="total">Total</string>
    <string name="svEvents_desc">Events in match</string>
    <string name="view">view</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="share">share</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>

    <!-- report.event -->
    <string name="what_desc">what</string>
    <string name="team_desc">team</string>
    <string name="reason_hint">reason</string>

    <!-- report.share -->
    <string name="share_report">Share match report</string>
    <string name="match_report">Match report</string>
    <string name="dialog_share_message">What to include?</string>
    <string name="dialog_share_time">Time off/on</string>
    <string name="dialog_share_pens">Penalties</string>
    <string name="dialog_share_clock">Clock time</string>

    <!-- prepare -->
    <string name="bPrepare_text">Send to watch</string>
    <string name="etHomeName_text">Home name</string>
    <string name="etHomeName_desc">Home team name</string>
    <string name="sHomeColor_text">Home color</string>
    <string name="sHomeColor_desc">Home color selection</string>
    <string name="etAwayName_text">Away name</string>
    <string name="etAwayName_desc">Away team name</string>
    <string name="sAwayColor_text">Away color</string>
    <string name="sAwayColor_desc">Away color selection</string>
    <string name="sMatchType_text">Match type</string>
    <string name="sMatchType_desc">Match type selection</string>
    <string name="match_type_details_show">Show match type details</string>
    <string name="match_type_details_hide">Hide match type details</string>
    <string name="bSaveCustom_text">Save match type</string>
    <string name="bDelCustom_text">Delete match type</string>
    <string name="etPeriodTime_text">Time/period</string>
    <string name="etPeriodCount_text">Period count</string>
    <string name="etSinbin_text">Sinbin</string>
    <string name="etPointsTry_text">Points for Try</string>
    <string name="etPointsCon_text">Points for Conversion</string>
    <string name="etPointsGoal_text">Points for Goal</string>
    <string name="etClockPK_text">Penalty kick clock</string>
    <string name="etClockCon_text">Conversion kick clock</string>
    <string name="etClockRestart_text">Restart kick clock</string>
    <string name="watch_settings_show">Show watch settings</string>
    <string name="watch_settings_hide">Hide watch settings</string>
    <string name="cbScreenOn_text">Keep screen on</string>
    <string name="sTimerType_text">Timer type</string>
    <string name="timer_type_up">count up</string>
    <string name="timer_type_down">count down</string>
    <string name="cbRecordPlayer_text">Record player #</string>
    <string name="cbRecordPens_text">Record penalties</string>
    <string name="cbDelayEnd_text">Delay end of period</string>

    <string name="time_period_empty">Time/period can\'t be empty</string>
    <string name="period_count_empty">Period count can\'t be empty</string>
    <string name="points_try_empty">Points for Try can\'t be empty</string>

    <!-- prepare.custom match type -->
    <string name="custom_match_hint">Enter match type name</string>
    <string name="save_match_type">Save match type</string>

    <string-array name="eventTypes">
        <item>TRY</item>
        <item>CONVERSION</item>
        <item>PENALTY TRY</item>
        <item>GOAL</item>
        <item>PENALTY GOAL</item>
        <item>DROP GOAL</item>
        <item>YELLOW CARD</item>
        <item>RED CARD</item>
        <item>PENALTY</item>
    </string-array>
    <string name="Time_off">Time off</string>
    <string name="Resume_time">Resume time</string>
    <string name="Start">Start</string>
    <string name="Result">Result</string>
    <string name="first_half">first half</string>
    <string name="second_half">second half</string>
    <string name="extra_time">extra time</string>
    <string name="period">period</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>

    <string-array name="teamColors">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gold</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>white</item>
    </string-array>

    <string-array name="matchTypes">
        <item>custom</item>
        <item>15s</item>
        <item>10s</item>
        <item>7s</item>
        <item>beach 7s</item>
        <item>beach 5s</item>
    </string-array>

    <!-- Comms -->
    <string name="connecting_to">Connecting to %s</string>
    <string name="connected_to">Connected to %s</string>
    <string name="disconnected">Disconnected, tap icon to connect</string>

    <string name="fail_BT_denied">No Bluetooth permission. Allow nearby devices, try again.</string>
    <string name="fail_BT_off">Bluetooth turned off</string>
    <string name="fail_BT">That did not work, tap icon to connect with watch</string>

    <string name="update_mobile_app">App is outdated, update in the store</string>
    <string name="match_ongoing">Match already started, can\'t prepare anymore</string>
    <string name="fail_unexpected">Unexpected technical error</string>

    <!-- fail -->
    <string name="fail_prepare">Problem with sending settings</string>
    <string name="fail_show_match">Failed to show match</string>
    <string name="fail_show_history">Failed to show History</string>
    <string name="fail_send_message">Failed to send message to watch</string>
    <string name="fail_response">Problem with response from watch</string>
    <string name="fail_import">Failed to import matches</string>
    <string name="fail_export">Failed to export matches</string>
    <string name="fail_delete">Failed to delete</string>
    <string name="fail_save">Failed to save</string>
    <string name="fail_share">Failed to share</string>
    <string name="fail_show_match_history">Failed to show a match in the history</string>
    <string name="fail_receive_settings">Problem with settings from watch</string>
    <string name="fail_read_custom_match_types">Failed to read custom match types from storage</string>
    <string name="fail_load_custom_match_type">Failed to load custom match type</string>
    <string name="fail_del_match_type">Failed to delete match type</string>
    <string name="fail_save_match_type">Failed to save match type</string>
    <string name="fail_receive_matches">Failed to receive matches</string>
    <string name="fail_read_matches">Failed to read matches from storage</string>
    <string name="fail_store_matches">Failed to store matches</string>
    <string name="fail_del_match">Failed to delete match</string>
    <string name="fail_del_event">Failed to delete event</string>
    <string name="fail_save_match">Failed to save match</string>
    <string name="fail_app_not_installed">RugbyRefereeWatch is not installed on the watch, go install it</string>

</resources>
