<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
        android:id="@+id/bPrepare"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/bPrepare_text"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/etHomeName_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etHomeName"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/home"
                    android:hint="@string/etHomeName_desc"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/sHomeColor_text"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/sHomeColor"
                    android:layout_height="48dp"
                    android:contentDescription="@string/sHomeColor_desc" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/etAwayName_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etAwayName"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/away"
                    android:hint="@string/etAwayName_desc"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/sAwayColor_text"
                    android:textSize="18sp" />
                <Spinner
                    android:id="@+id/sAwayColor"
                    android:layout_height="48dp"
                    android:contentDescription="@string/sAwayColor_desc"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/sMatchType_text"
                    android:textSize="18sp" />
                <Spinner
                    android:id="@+id/sMatchType"
                    android:layout_height="48dp"
                    android:contentDescription="@string/sMatchType_desc"/>
            </TableRow>
            <TableRow
                android:id="@+id/trTimePeriod"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etTimePeriod"
                    android:text="@string/etTimePeriod_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etTimePeriod"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_40"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow
                android:id="@+id/trPeriodCount"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etPeriodCount"
                    android:text="@string/etPeriodCount_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etPeriodCount"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_2"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow
                android:id="@+id/trSinbin"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etSinbin"
                    android:text="@string/etSinbin_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etSinbin"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_10"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow
                android:id="@+id/trPointsTry"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etPointsTry"
                    android:text="@string/etPointsTry_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etPointsTry"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_5"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow
                android:id="@+id/trPointsCon"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etPointsCon"
                    android:text="@string/etPointsCon_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etPointsCon"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_2"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow
                android:id="@+id/trPointsGoal"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etPointsGoal"
                    android:text="@string/etPointsGoal_text"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/etPointsGoal"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_3"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/bWatchSettings"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:text="@string/watch_settings"
                    android:textSize="18sp"
                    android:layout_span="2" />
            </TableRow>
            <TableRow
                android:id="@+id/trRecordPlayer"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/etRecordPlayer"
                    android:text="@string/etRecordPlayer_text"
                    android:textSize="18sp" />
                <CheckBox
                    android:id="@+id/cbRecordPlayer"
                    android:layout_height="48dp"
                    android:importantForAutofill="no" />
            </TableRow>
            <TableRow
                android:id="@+id/trScreenOn"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/cbScreenOn"
                    android:text="@string/cbScreenOn_text"
                    android:textSize="18sp" />
                <CheckBox
                    android:id="@+id/cbScreenOn"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:importantForAutofill="no" />
            </TableRow>
            <TableRow
                android:id="@+id/trTimerType"
                android:visibility="gone">
                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:labelFor="@+id/sTimerType"
                    android:text="@string/sTimerType_text"
                    android:textSize="18sp" />
                <Spinner
                    android:id="@+id/sTimerType"
                    android:layout_height="48dp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>