<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020-2025 Bart Vullings <dev@windkracht8.com>
  ~ This file is part of RugbyRefereeWatch
  ~ RugbyRefereeWatch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~ RugbyRefereeWatch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/permission_title"
        android:textColor="@color/button"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/permission_nearby_title"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/permission_nearby"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_round"
        android:padding="10dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="18sp"
        android:text="@string/permission_nearby"
        android:textColor="@color/button"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/permission_explain"/>
</LinearLayout>