<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020-2025 Bart Vullings <dev@windkracht8.com>
  ~ This file is part of RugbyRefereeWatch
  ~ RugbyRefereeWatch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~ RugbyRefereeWatch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bDel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/x"
            android:textColor="@color/error"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="end"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/what"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/what_desc"
            android:textSize="18sp"
            android:entries="@array/eventTypes"
            android:theme="@style/rrwReportEditSpinner"/>
        <Spinner
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/team_desc"
            android:textSize="18sp"
            android:entries="@array/teams"
            android:theme="@style/rrwReportEditSpinner" />
        <EditText
            android:id="@+id/who"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:hint="@string/_00"
            android:importantForAutofill="no"
            android:inputType="number"
            android:gravity="end"
            android:textSize="18sp" />
    </LinearLayout>
    <EditText
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:hint="@string/reason_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        android:visibility="gone" />
</LinearLayout>
