<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020-2025 Bart Vullings <dev@windkracht8.com>
  ~ This file is part of RugbyRefereeWatch
  ~ RugbyRefereeWatch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~ RugbyRefereeWatch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/bSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bSync_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/button"
        android:visibility="gone"/>
    <ScrollView
        android:id="@+id/svHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/svMatches_desc">
        <LinearLayout
            android:id="@+id/llMatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bImport"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bImport_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button" />
        <Button
            android:id="@+id/bExport"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bExport_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button"
            android:visibility="gone" />
        <Button
            android:id="@+id/bDelete"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bDelete_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/error"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
