<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:contentDescription="@string/icon_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_watch" />
    <TextView
        android:id="@+id/device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35sp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/connect"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/llTabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon">
        <TextView
            android:id="@+id/tabHistoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/tab_active"
            android:gravity="center"
            android:text="@string/history"
            android:textAllCaps="true" />
        <TextView
            android:id="@+id/tabReportLabel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/report"
            android:textAllCaps="true" />
        <TextView
            android:id="@+id/tabPrepareLabel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/prepare"
            android:textAllCaps="true" />
    </LinearLayout>
    <com.windkracht8.rugbyrefereewatch.TabHistory
        android:id="@+id/tabHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabs"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.windkracht8.rugbyrefereewatch.TabReport
        android:id="@+id/tabReport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabs"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.windkracht8.rugbyrefereewatch.TabPrepare
        android:id="@+id/tabPrepare"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabs"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>